# basicpkg-tutorial-drew

./: README  README.md  setup.cfg
src/basicpkg_tutorial_drew.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_divide_by_three.py  test_multiply_by_three.py
