[metadata]
name = basicpkg-tutorial-drew
version = 1.0.0
author = Drew Rohskopf
author_email = drew.rohskopf@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/rohskopf/basicpkg-tutorial-drew
project_urls =
    Bug Tracker = https://github.com/rohskopf/basicpkg-tutorial-drew/-/issues
    repository = https://github.com/rohskopf/basicpkg-tutorial-drew
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src